# szachus

./: Cargo.toml
src/: lib.rs  main.rs
src/game/: mod.rs  resources.rs  systems.rs
src/game/chessboard/: components.rs  mod.rs  systems.rs
src/game/turn/: components.rs  mod.rs  systems.rs  to.rs
src/game_over/: components.rs  mod.rs  systems.rs
src/main_menu/: mod.rs
src/main_menu/systems/: interactions.rs  layout.rs
src/network/: mod.rs  resources.rs  state.rs  systems.rs
src/ui_views/: mod.rs  retry_game.rs
src/ui_views/fatal_error/: components.rs  mod.rs  systems.rs
src/ui_views/game_over/: components.rs  mod.rs  systems.rs
src/ui_views/hud/: components.rs  mod.rs  resources.rs  systems.rs
src/ui_views/main_menu/: components.rs
src/ui_views/main_menu/systems/: interactions.rs  layout.rs
