[package]
name = "szachus"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bevy = { version = "0.14.2", features = ["dynamic_linking"] }
bevy_mod_picking = "0.20.1"
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
wasm-bindgen = "0.2.95"

[profile.release]
codegen-units = 1
lto = "thin"
[profile.wasm-release]
inherits = "release"
opt-level = "z"
strip = "debuginfo"

[unstable]
codegen-backend = true

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3
