[package]
name = "szachus"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-channel = "2.3.1"
bevy = { version = "0.14.2", features = ["dynamic_linking"] }
bevy_mod_picking = "0.20.1"
js-sys = "0.3.74"
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
serde = { version = "1.0.215", features = ["derive", "alloc"] }
serde_json = { version = "1.0.133", features = ["alloc"] }
wasm-bindgen = "0.2.95"
web-sys = { version = "0.3.74", features = [
    "Storage",
    "Window",
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "BinaryType",
    "Blob",
    "ErrorEvent",
    "FileReader",
    "MessageEvent",
    "ProgressEvent",
    "WebSocket"
    ] }

[profile.release]
codegen-units = 1
lto = "thin"
[profile.wasm-release]
inherits = "release"
opt-level = "z"
strip = "debuginfo"

[unstable]
codegen-backend = true

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3
